<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">


    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@color/dark_purple"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </androidx.appcompat.widget.Toolbar>



    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/purple_bg">
            </ImageView>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/searchbar"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_50sdp">
            </ImageView>



            <EditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_80sdp"
                android:hint="Search"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:background="@null"
                android:imeActionLabel="Search" />



            <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/search"
                    android:layout_marginStart="@dimen/_230sdp"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:layout_marginEnd="@dimen/_40sdp"/>

            <ImageView
                android:id="@+id/logo"
                android:background="@android:color/transparent"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_alignParentStart="true"
                android:src="@drawable/hr_logo"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_25sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcometxt"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_90sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/opensans_bold"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dreamjob"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_115sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/light_grey"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:background="@drawable/job_img"
                android:layout_marginTop="@dimen/_140sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_160sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginStart="@dimen/_162sdp"
                android:singleLine="true"
                android:text="@string/jobtxt"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_177sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/opensans_semibold"
                android:layout_marginStart="@dimen/_167sdp"
                android:singleLine="true"
                android:text="@string/jobtxt2"
                android:textColor="@color/black"
                android:textSize="@dimen/_7ssp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="458dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="462dp"
                        android:layout_gravity="center"
                        android:background="@color/background_color"
                        android:divider="@null"
                        android:dividerHeight="0dp">

                    </ListView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


<com.google.android.material.bottomnavigation.BottomNavigationView
    android:layout_width="match_parent"
    android:layout_height="@dimen/_42sdp"
    android:id="@+id/bottomNavigationView"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bottom_background"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginBottom="1dp"
    android:elevation="2dp"
    app:menu="@menu/bottom_menu"
    app:itemIconSize="25dp"
    app:itemIconTint="@drawable/item_selector"
    app:itemRippleColor="@android:color/transparent"
    app:labelVisibilityMode="unlabeled"/>


        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.drawerlayout.widget.DrawerLayout>