<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/purple_bg" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:text="Apply Job"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_30ssp"/>



        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="31dp"
            android:layout_marginTop="@dimen/_32sdp"
            app:srcCompat="@drawable/arrow"
            android:layout_alignParentLeft="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:text="Fill this form to proceed further"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_95sdp"
                android:layout_marginLeft="@dimen/_20sdp" />



        </LinearLayout>

        <TextView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:text="* indicates required"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/_115sdp"
            android:layout_marginLeft="@dimen/_20sdp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_160sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="Full Name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                android:layout_gravity="center"
                app:strokeWidth="0.3dp"
                android:backgroundTint="@color/white">


                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/opensans_regular"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:theme="@style/NoUnderlineEditTextStyle" />



            </com.google.android.material.card.MaterialCardView>


            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="Email Adress"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_30sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                android:layout_gravity="center"
                app:strokeWidth="0.3dp"
                android:backgroundTint="@color/white">


                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/opensans_regular"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:theme="@style/NoUnderlineEditTextStyle" />



            </com.google.android.material.card.MaterialCardView>


            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="Phone Number"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                android:layout_gravity="center"
                app:strokeWidth="0.3dp"
                android:backgroundTint="@color/white">


                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/opensans_regular"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:theme="@style/NoUnderlineEditTextStyle"
                    android:inputType="number"/>



            </com.google.android.material.card.MaterialCardView>


            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/resume"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />



            <FrameLayout
                android:id="@+id/UploadSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/upload_bg"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/cross_icon"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/cross_icon"
                    android:layout_marginLeft="@dimen/_230sdp"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/upload_icon"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_15sdp">
                </ImageView>

                <TextView
                    android:id="@+id/uploadText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload Resume"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp" />
                <TextView
                    android:id="@+id/uploadText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Microsoft Word or PDF"
                    android:textColor="@color/light_grey"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp" />

            </FrameLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/commute"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/commuteRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/option1"
                        android:text="Yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_20sdp" />

                    <RadioButton
                        android:id="@+id/option2"
                        android:text="No"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                android:layout_gravity="center"
                app:strokeWidth="0.3dp"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/opensans_regular"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:theme="@style/NoUnderlineEditTextStyle"
                    android:inputType="number"/>
            </com.google.android.material.card.MaterialCardView>


            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/describe"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_50sdp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:cardCornerRadius="@dimen/_30sdp"
                    android:layout_gravity="center"
                    app:strokeWidth="0.3dp"
                    android:backgroundTint="@color/white">

                    <EditText
                        android:id="@+id/job_desribe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/opensans_regular"
                        android:gravity="start|top"
                        android:layout_gravity="start|top"
                        android:theme="@style/NoUnderlineEditTextStyle"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        />

                </com.google.android.material.card.MaterialCardView>
            </ScrollView>



            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/opensans_regular"
                android:layout_marginStart="@dimen/_80sdp"
                android:layout_marginEnd="@dimen/_80sdp"
                android:textSize="@dimen/_12sdp"
                android:text="Apply now"
                android:textColor="@color/white"
                app:backgroundTint="#59239E"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>